# game-of-life

./: Cargo.toml  LICENSE  README.md  cells  test.sh
src/: consul.rs  main.rs
