[package]
name = "game-of-life"
version = "0.1.0"
authors = ["liyiheng <liyihenggnehiyil@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.44"
actix-web = "2.0.0"
actix-rt = "1.0.0"
